// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters out arbitrary fields from results, and does not render them 1`] = `
<li
  className="sui-result"
>
  <div
    className="sui-result__header"
  />
  <div
    className="sui-result__body"
  >
    <ul
      className="sui-result__details"
    >
      <li
        key="field"
      >
        <span
          className="sui-result__key"
        >
          field
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "value",
            }
          }
        />
      </li>
    </ul>
  </div>
</li>
`;

exports[`renders correctly when there is a URL 1`] = `
<li
  className="sui-result"
>
  <div
    className="sui-result__header"
  />
  <div
    className="sui-result__body"
  >
    <ul
      className="sui-result__details"
    >
      <li
        key="field"
      >
        <span
          className="sui-result__key"
        >
          field
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "value",
            }
          }
        />
      </li>
      <li
        key="url"
      >
        <span
          className="sui-result__key"
        >
          url
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "http://www.example.com",
            }
          }
        />
      </li>
    </ul>
  </div>
</li>
`;

exports[`renders correctly when there is a malicious URL 1`] = `
<li
  className="sui-result"
>
  <div
    className="sui-result__header"
  />
  <div
    className="sui-result__body"
  >
    <ul
      className="sui-result__details"
    >
      <li
        key="field"
      >
        <span
          className="sui-result__key"
        >
          field
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "value",
            }
          }
        />
      </li>
      <li
        key="url"
      >
        <span
          className="sui-result__key"
        >
          url
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "javascript://test%0aalert(document.domain)",
            }
          }
        />
      </li>
    </ul>
  </div>
</li>
`;

exports[`renders correctly when there is a title 1`] = `
<li
  className="sui-result"
>
  <div
    className="sui-result__header"
  >
    <span
      className="sui-result__title"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Title",
        }
      }
    />
  </div>
  <div
    className="sui-result__body"
  >
    <ul
      className="sui-result__details"
    >
      <li
        key="field"
      >
        <span
          className="sui-result__key"
        >
          field
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "value",
            }
          }
        />
      </li>
      <li
        key="title"
      >
        <span
          className="sui-result__key"
        >
          title
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </li>
    </ul>
  </div>
</li>
`;

exports[`renders correctly when there is a title and url 1`] = `
<li
  className="sui-result"
>
  <div
    className="sui-result__header"
  >
    <a
      className="sui-result__title sui-result__title-link"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Title",
        }
      }
      href="http://www.example.com"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    />
  </div>
  <div
    className="sui-result__body"
  >
    <ul
      className="sui-result__details"
    >
      <li
        key="field"
      >
        <span
          className="sui-result__key"
        >
          field
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "value",
            }
          }
        />
      </li>
      <li
        key="title"
      >
        <span
          className="sui-result__key"
        >
          title
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </li>
      <li
        key="url"
      >
        <span
          className="sui-result__key"
        >
          url
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "http://www.example.com",
            }
          }
        />
      </li>
    </ul>
  </div>
</li>
`;

exports[`renders correctly when there is a titleField but it is not defined in result 1`] = `
<li
  className="sui-result"
>
  <div
    className="sui-result__header"
  />
  <div
    className="sui-result__body"
  >
    <ul
      className="sui-result__details"
    >
      <li
        key="field"
      >
        <span
          className="sui-result__key"
        >
          field
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "value",
            }
          }
        />
      </li>
    </ul>
  </div>
</li>
`;

exports[`renders correctly when there is a urlField but it is not defined in result 1`] = `
<li
  className="sui-result"
>
  <div
    className="sui-result__header"
  />
  <div
    className="sui-result__body"
  >
    <ul
      className="sui-result__details"
    >
      <li
        key="field"
      >
        <span
          className="sui-result__key"
        >
          field
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "value",
            }
          }
        />
      </li>
    </ul>
  </div>
</li>
`;

exports[`renders correctly when there is not a URL or title 1`] = `
<li
  className="sui-result"
>
  <div
    className="sui-result__header"
  />
  <div
    className="sui-result__body"
  >
    <ul
      className="sui-result__details"
    >
      <li
        key="field"
      >
        <span
          className="sui-result__key"
        >
          field
        </span>
         
        <span
          className="sui-result__value"
          dangerouslySetInnerHTML={
            Object {
              "__html": "value",
            }
          }
        />
      </li>
    </ul>
  </div>
</li>
`;
